// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag Display renders correctly 1`] = `
<span
  class="ecl-tag ecl-tag--display"
>
  Display tag
</span>
`;

exports[`Tag Display renders correctly with extra attributes 1`] = `
<span
  class="ecl-tag ecl-tag--display"
>
  Display tag
</span>
`;

exports[`Tag Display renders correctly with extra class names 1`] = `
<span
  class="ecl-tag ecl-tag--display custom-class custom-class--test"
>
  Display tag
</span>
`;

exports[`Tag Link renders correctly 1`] = `
<a
  class="ecl-tag"
  href="/example"
>
  Link tag
</a>
`;

exports[`Tag Link renders correctly with extra attributes 1`] = `
<a
  class="ecl-tag"
  data-test="data-test-value"
  data-test-1="data-test-value-1"
  href="/example"
>
  Link tag
</a>
`;

exports[`Tag Link renders correctly with extra class names 1`] = `
<a
  class="ecl-tag custom-class custom-class--test"
  href="/example"
>
  Link tag
</a>
`;

exports[`Tag Removable renders correctly 1`] = `
<a
  aria-label="Dismiss"
  class="ecl-tag ecl-tag--removable"
  href="#"
>
  Removable tag
  <span
    class="ecl-tag__icon"
  >
    <svg
      aria-hidden="true"
      class="ecl-icon ecl-icon--xs ecl-tag__icon-close"
      focusable="false"
    >
      <use
        xlink:href="/icons.svg#close"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="ecl-icon ecl-icon--xs ecl-tag__icon-close-filled"
      focusable="false"
    >
      <use
        xlink:href="/icons.svg#close-filled"
      />
    </svg>
  </span>
</a>
`;

exports[`Tag Removable renders correctly with extra attributes 1`] = `
<a
  aria-label="Dismiss"
  class="ecl-tag ecl-tag--removable"
  data-test="data-test-value"
  data-test-1="data-test-value-1"
  href="#"
>
  Removable tag
  <span
    class="ecl-tag__icon"
  >
    <svg
      aria-hidden="true"
      class="ecl-icon ecl-icon--xs ecl-tag__icon-close"
      focusable="false"
    >
      <use
        xlink:href="/icons.svg#close"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="ecl-icon ecl-icon--xs ecl-tag__icon-close-filled"
      focusable="false"
    >
      <use
        xlink:href="/icons.svg#close-filled"
      />
    </svg>
  </span>
</a>
`;

exports[`Tag Removable renders correctly with extra class names 1`] = `
<a
  aria-label="Dismiss"
  class="ecl-tag ecl-tag--removable custom-class custom-class--test"
  href="#"
>
  Removable tag
  <span
    class="ecl-tag__icon"
  >
    <svg
      aria-hidden="true"
      class="ecl-icon ecl-icon--xs ecl-tag__icon-close"
      focusable="false"
    >
      <use
        xlink:href="/icons.svg#close"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="ecl-icon ecl-icon--xs ecl-tag__icon-close-filled"
      focusable="false"
    >
      <use
        xlink:href="/icons.svg#close-filled"
      />
    </svg>
  </span>
</a>
`;
